--- a/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-025-402">John Canti</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -184,6 +184,9 @@
                 <change who="#john" when="2024-03-28T20:07:02.18Z" type="text-version" status="1.0.2" xml:id="UT22084-034-025-1225">
                     <desc>Typo corrected</desc>
                 </change>
+                <change who="#konchog" when="2024-03-29T15:49:59.294Z" type="text-version" status="1.0.3" xml:id="UT22084-034-025-1226">
+                    <desc>Several fixes through different sections.</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -201,7 +204,7 @@
           that this is possible for couples such as them who are equal in faith, ethical discipline,
           generosity, and wisdom, and who practice the Dharma together. In the second, longer part of
           the sūtra, the Buddha gives a teaching on the five precepts, by which one renounces the five negative deeds—killing,
-          stealing, sexual misconduct, speaking falsehood, and consuming intoxicants. The sufferings in various hells that are the consequence
+          stealing, sexual misconduct, speaking falsehoods, and consuming intoxicants. The sufferings in various hells that are the consequence
           of those five negative deeds are described, as are the benefits experienced by those who renounce them.</p>
       </tei:div>
       <tei:div xmlns:tei="http://www.tei-c.org/ns/1.0" type="acknowledgment">
@@ -230,10 +233,10 @@
               thirteen sūtras in the Tshalpa-lineage Kangyurs, as well as at the beginning of
               the collection in the Berlin and the Narthang Kangyurs.</note> is among the few texts
             in the Tibetan Kangyur that also belong to the Theravāda tradition. It is the seventh of
-            the so-called “thirteen late-translated sūtras”<note place="end" xml:id="UT22084-034-025-385">
+            the so-called “thirteen late-translated sūtras.”<note place="end" xml:id="UT22084-034-025-385">
                             <ref target="https://read.84000.co/section/O1JC114941JC14714.html">thirteen
                 late-translated sūtras</ref>
-                        </note> that were translated into Tibetan from Pali in
+                        </note> These were translated into Tibetan from Pali in
             the first decade of the fourteenth century at Tharpaling by Tharpa Lotsawa Nyima
             Gyaltsen Palsangpo and the visiting Sinhalese monk Ānandaśrī, at the request of Drakpa
             Gyaltsen, the local ruler of Zhalu.</p>
@@ -291,7 +294,7 @@
           <milestone unit="chunk" xml:id="UT22084-034-025-65"/>
           <p tid="14">Thus, the five negative deeds are each associated here with a particular great
             hell. For killing, it is the hell called Reviving; for stealing, the hell called
-            Wailing; and for sexual misconduct, the hell called Loud Wailing; and for each of these
+            Wailing; and for sexual misconduct, the hell called Loud Wailing; and, for each of these
             three, secondary or neighboring hells are also mentioned.<note place="end" xml:id="UT22084-034-025-66"> Technically, all the great hells are said to be
               surrounded by these neighboring hells. However, in this sūtra they are mentioned with
               regard to only three and are not described using the terms “secondary” or
@@ -318,9 +321,9 @@
               translation, see Bhikkhu Bodhi 2012, p. 762.</note> enumerates the five negative deeds
             that lead to rebirth in the hells and the respective renunciations that lead to rebirth
             in the heavens—none reflects the Tibetan text precisely. If a composite text matching
-            the Tibetan did indeed exist in Pali, then it may, according to the logic of what Ven.
+            the Tibetan did indeed exist in Pali, then, according to the logic of what Ven.
             Bhikkhu Bodhi has called “composite numerical suttas,”<note place="end" xml:id="UT22084-034-025-70"> For a description and examples of this principle, see
-              Bhikkhu Bodhi 2012, pp. 63–65.</note> have been an example of those texts now found in
+              Bhikkhu Bodhi 2012, pp. 63–65.</note> it may have been an example of those texts now found in
             The Book of the Nines (Navakanipāta). However, The Book of the Nines, as presently
             constituted in the Aṅguttaranikāya, does not contain any sutta that combines the four
             qualities and the five precepts in this way.<note place="end" xml:id="UT22084-034-025-71"> There are other suttas in the Navakanipāta, however, that
@@ -433,7 +436,7 @@
           </p>
           <milestone unit="chunk" xml:id="UT22084-034-025-93"/>
           <p tid="27">Then the <term ref="UT22084-034-025-288">householder</term> Nakulamātā
-            addressed the Bhagavān, “Ever since, Venerable Bhagavān, I was brought as a girl to
+            addressed the Bhagavān: “Ever since, Venerable Bhagavān, I was brought as a girl to
             householder Nakulapitā when he was still young, not even the thought of being unfaithful
             to Nakulapitā has occurred to me, and there has been no physical wrongdoing. Bhagavān,
             this is our mutual experience in <term ref="UT22084-034-025-293">this life</term>, and
@@ -623,7 +626,7 @@
             rebirth-destiny, in heaven, in a deva world.</p>
           <lb/>
           <milestone unit="chunk" xml:id="UT22084-034-025-131"/>
-          <p tid="47">“Stealing means robbing another’s possessions, that have not been given, from
+          <p tid="47">“Stealing means robbing another’s possessions, which have not been given, from
             their house or room and so on, whether consciously or unconsciously. Those who take from
             others by deception in order to make a living likewise eventually take what has not been
             given and will, after the destruction of the body, after death, be reborn in the Wailing
@@ -1023,12 +1026,12 @@
           <p tid="91">“That which is called <distinct>lying</distinct> is reprehensible. Sons of
             good family should refrain from pursuing the objects of their desire. Instead they
             should extract the essence of that which is true and good. That which is called
-              <distinct>speaking falsehood</distinct> serves no purpose. It deceives the world and
+              <distinct>speaking falsehoods</distinct> serves no purpose. It deceives the world and
             leads to rebirth in the Hell of Incessant Torture for many future lives.<note place="end" xml:id="UT22084-034-025-206"> Usually, rebirth in this worst of the
               so-called major hot hells is the result of grave negative actions such as matricide,
               patricide, and showing disrespect toward holy beings (cf., e.g., Hazlewood 1987, p.
-              140, n. 20). Why it is mentioned here as the result of speaking falsehood, although
-              the sūtra itself has stated earlier that the result of speaking falsehood is rebirth
+              140, n. 20). Why it is mentioned here as the result of speaking falsehoods, although
+              the sūtra itself has stated earlier that the result of speaking falsehoods is rebirth
               in the Black Thread Hell, is unclear. </note> Therefore, one should not lie for the
             sake of one’s livelihood.<note place="end" xml:id="UT22084-034-025-207"> Alternatively,
               this sentence may be interpreted to mean, “Not even for the sake of one’s life should
@@ -1062,8 +1065,8 @@
           <p tid="93">For that reason, the Bhagavān has said: </p>
           <milestone unit="chunk" xml:id="UT22084-034-025-215"/>
           <lg tid="94">
-            <l>“The caustic and rough river</l>
-            <l>Vaitaraṇī, without a ford, is very difficult to cross;</l>
+            <l>“The caustic and rough river Vaitaraṇī,</l>
+            <l>Without a ford, is very difficult to cross;</l>
             <l>With its petals of iron lotuses</l>
             <l>Rocking<note place="end" xml:id="UT22084-034-025-216"> Translating D <foreign xml:lang="Bo-Ltn" type="quote">’gre</foreign>; C, N, K, Y, and S read <foreign xml:lang="Bo-Ltn" type="quote">’gro</foreign>. </note> on sharp leaves<note place="end" xml:id="UT22084-034-025-217"> The traditional imagery is as follows: the
                 roughness of the river refers to the cutting waves, which are said to be like
@@ -1099,7 +1102,7 @@
           <lg tid="97">
             <l>“They will quickly become aware </l>
             <l>Of the past and the future, </l>
-            <l>And the fleeting present too; </l>
+            <l>And the fleeting present too, </l>
             <l>And they will always remain mindful.</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-034-025-223"/>
@@ -1267,8 +1270,9 @@
             <item xml:id="UT22084-034-025-252">
                             <abbr>Mvy.</abbr>
                             <expan>
-                                <title xml:lang="en">
-                  Mahāvyutpatti with sGra sbyor bam po gñis pa</title>
+                                <title xml:lang="Sa-Ltn">
+              Mahāvyutpatti</title> with <title xml:lang="Bo-Ltn">
+                sgra sbyor bam po gñis pa</title>
                             </expan>
                         </item>
             <item xml:id="UT22084-034-025-253">
@@ -1803,7 +1807,7 @@
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-034-025-318">
-              <term type="translationMain">speaking falsehood</term>
+              <term type="translationMain">speaking falsehoods</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">brdzun du smra ba </term>
               <term xml:lang="bo" n="1">བརྫུན་དུ་སྨྲ་བ།</term>
               <term xml:lang="Pi-Ltn">musāvāda</term>
@@ -1881,10 +1885,10 @@
               <note type="definition">
                                 <p>A term in the Pali Buddhist tradition for five kinds of
                   severe punishments in hell, which those who have committed gravely negative
-                  actions will have to endure: (1) <foreign xml:lang="Pi-Ltn" type="term">tattalohasecana</foreign>, becoming doused with molten copper, (2) <foreign xml:lang="Pi-Ltn" type="term">aṅgārapabbatāropana</foreign>, climbing a mountain
-                  of glowing coals, (3) <foreign xml:lang="Pi-Ltn" type="term">lohakumbhipakkhepana</foreign>, being thrown into a (hot?) copper cauldron, (4)
+                  actions will have to endure: (1) <foreign xml:lang="Pi-Ltn" type="term">tattalohasecana</foreign>, becoming doused with molten copper; (2) <foreign xml:lang="Pi-Ltn" type="term">aṅgārapabbatāropana</foreign>, climbing a mountain
+                  of glowing coals; (3) <foreign xml:lang="Pi-Ltn" type="term">lohakumbhipakkhepana</foreign>, being thrown into a (hot?) copper cauldron; (4)
                     <foreign xml:lang="Pi-Ltn" type="term">asipattavanapavesana</foreign>, entering
-                  the forest of blades, and (5) <foreign xml:lang="Pi-Ltn" type="term">vetaraṇiyaṃ
+                  the forest of blades; and (5) <foreign xml:lang="Pi-Ltn" type="term">vetaraṇiyaṃ
                     samotaraṇaṃ</foreign>, swimming across the river Vaitaraṇī (see Stede 1914, p.
                   37). The fivefold ordeal seems to partially overlap with the ordeals of the four
                   secondary hells. The relationship between these two, as well as between the
@@ -2110,7 +2114,7 @@
                     <foreign xml:lang="Sa-Ltn" type="term">śikṣā</foreign> is used in its second
                   main sense as it appears in the Vinaya (the first being “training”), namely, five
                   kinds of right conduct that are observed by all lay Buddhists. They are refraining
-                  from (1) killing, (2) stealing, (3) sexual misconduct, (4) speaking falsehood or
+                  from (1) killing, (2) stealing, (3) sexual misconduct, (4) speaking falsehoods or
                   lying, and (5) consuming intoxicants (alcohol in particular). The term is here
                   used synonymously with the “<term ref="UT22084-034-025-331">five disciplines</term>.” </p>
                             </note>
