--- a/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
+++ b/translations/kangyur/placeholders/088-013_toh519,979-the_incantation_the_essence_of_dependent_arising.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-088-013-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -28,7 +28,7 @@
                     <ref>Toh 519</ref>
                     <biblScope>vol.88, ff.39r-41r(pp.77-81)</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
-                        <volume number="88" start-page="77" end-page="81"/>
+                        <volume number="88" start-page="111" end-page="115"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12241" work="W22084"/>
@@ -37,7 +37,7 @@
                     <ref>Toh 979</ref>
                     <biblScope>vol.101, ff.96v-99r(pp.192-197)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="101" start-page="192" end-page="197"/>
+                        <volume number="102" start-page="192" end-page="197"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12742" work="W22084"/>
@@ -62,6 +62,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-01T13:51:14.252Z" type="text-version" status="0.0.4" xml:id="UT22084-088-013-8">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-03-31T05:57:40.196Z" type="text-version" status="0.0.5" xml:id="UT22084-088-013-9">
+                    <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
