--- a/translations/kangyur/placeholders/088-017_toh523,887-the_incantation_lord_of_the_earth.xml
+++ b/translations/kangyur/placeholders/088-017_toh523,887-the_incantation_lord_of_the_earth.xml
@@ -5,14 +5,19 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sa'i dbang po'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">mahāmahīndradhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Mahāmahīndradhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, Lord of the Earth</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sa'i dbang po chen po zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmahīndranāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahāmahīndranāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sa'i dbang po chen po zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamahāmahīndranāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamahāmahīndranāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-088-017"/>
             </publicationStmt>
             <sourceDesc>
@@ -20,7 +25,7 @@
                     <ref>Toh 523</ref>
                     <biblScope>vol.88, ff.43v-45r(pp.86-89)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="88" start-page="86" end-page="89"/>
+                        <volume number="88" start-page="120" end-page="123"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12246" work="W22084"/>
@@ -29,15 +34,22 @@
                     <ref>Toh 887</ref>
                     <biblScope>vol.100, ff.161v-163r(pp.322-325)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="100" start-page="322" end-page="325"/>
+                        <volume number="101" start-page="320" end-page="323"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12649" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:32:55.208Z" user="celso">23/09/2021 17:32:55</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-088-017-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-03-31T06:04:12.155Z" type="text-version" status="0.0.2" xml:id="UT22084-088-017-2">
+                    <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
