--- a/translations/kangyur/placeholders/088-018_toh524,977-the_incantation_the_doubtless.xml
+++ b/translations/kangyur/placeholders/088-018_toh524,977-the_incantation_the_doubtless.xml
@@ -4,16 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">gdon mi za ba'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, the Doubtless</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">gdon mi za ba'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryaniścayanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Niścayadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gdon mi za ba zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">niścayadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gdon mi za ba zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryaniścayanāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-088-018-6">Patrick Lambelet</author>
+                <author role="translatorEng" xml:id="UT22084-088-018-9">Patrick Lambelet</author>
             </titleStmt>
-    <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+            <editionStmt>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -26,7 +27,7 @@
                     <ref>Toh 524</ref>
                     <biblScope>vol.88, ff.45r-45r(pp.89-89)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="88" start-page="89" end-page="89"/>
+                        <volume number="88" start-page="123" end-page="123"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12247" work="W22084"/>
@@ -35,7 +36,7 @@
                     <ref>Toh 977</ref>
                     <biblScope>vol.101, ff.96r-96r(pp.191-191)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="191" end-page="191"/>
+                        <volume number="102" start-page="191" end-page="191"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12740" work="W22084"/>
@@ -57,6 +58,15 @@
                 </change>
                 <change who="#line-tofte" when="2023-08-08T14:17:06.596Z" type="text-version" status="0.0.3" xml:id="UT22084-088-018-5">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T14:17:38.53Z" type="text-version" status="0.0.4" xml:id="UT22084-088-018-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-09T10:16:09.413Z" type="text-version" status="0.0.6" xml:id="UT22084-088-018-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-03-31T06:18:38.484Z" type="text-version" status="0.0.7" xml:id="UT22084-088-018-11">
+                    <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
