--- a/translations/kangyur/placeholders/056-008_toh140,525,914-the_incantation_for_achieving_the_boundless_gate.xml
+++ b/translations/kangyur/placeholders/056-008_toh140,525,914-the_incantation_for_achieving_the_boundless_gate.xml
@@ -5,30 +5,31 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Achieving the Boundless Gate</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">anantamukhasādhakadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Anantamukhasādhakadhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sgo mtha' yas pa sgrub pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī that Leads to Realization Via the Infinite Gate</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryānantamukhasādhākanāmadhāraṇī</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryānantamukhasādhakanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryānantamukhasādhākanāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryānantamukhasādhakanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pas sgrub pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sgo mtha' yas pas sgrub pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pas bsgrub pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa sgo mtha' yas pa sgrub pa zhes bya ba'i gzungs</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sgo mtha' yas pas bsgrub pa'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-84"/>
-                <consultant role="dharmaMaster" ref="eft:person-415">Khenpo Tsulnam Rinpoche</consultant>
-                <consultant role="dharmaMaster" ref="eft:person-414">Khenpo Zhonu Nyima</consultant>
-                <consultant role="projectManager" ref="eft:person-413">Dakpa Gyatso</consultant>
-                <author role="translatorEng" ref="eft:person-413">Dakpa Gyatso</author>
-                <author role="translatorEng" ref="eft:person-416">Barbara Hazelton</author>
-                <author role="translatorEng" ref="eft:person-417">Rory Tasker</author>
-                <consultant role="advisor" ref="eft:person-418">Wangchuk Dorje Negi</consultant>
+                <author role="translatorMain" xml:id="UT22084-056-008-1"/>
+                <consultant role="dharmaMaster" xml:id="UT22084-056-008-2">Khenpo Tsulnam Rinpoche</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-056-008-3">Khenpo Zhonu Nyima</consultant>
+                <consultant role="projectManager" xml:id="UT22084-056-008-4">Dakpa Gyatso</consultant>
+                <author role="translatorEng" xml:id="UT22084-056-008-5">Dakpa Gyatso</author>
+                <author role="translatorEng" xml:id="UT22084-056-008-6">Barbara Hazelton</author>
+                <author role="translatorEng" xml:id="UT22084-056-008-7">Rory Tasker</author>
+                <consultant role="advisor" xml:id="UT22084-056-008-8">Wangchuk Dorje Negi</consultant>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2021</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-056-008"/>
                 <date/>
             </publicationStmt>
@@ -46,7 +47,7 @@
                     <ref>Toh 525</ref>
                     <biblScope>vol.88, ff.45r-54r(pp.89-107)</biblScope>
                     <location work="UT4CZ5369" count-pages="19">
-                        <volume number="88" start-page="89" end-page="107"/>
+                        <volume number="88" start-page="123" end-page="141"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12248" work="W22084"/>
@@ -55,27 +56,57 @@
                     <ref>Toh 914</ref>
                     <biblScope>vol.100, ff.244v-254v(pp.488-508)</biblScope>
                     <location work="UT4CZ5369" count-pages="21">
-                        <volume number="100" start-page="488" end-page="508"/>
+                        <volume number="101" start-page="486" end-page="506"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12676" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-14T13:30:55.228Z" user="admin">14/12/2022 13:30:55</note>
-                <note type="updated" update="translation-status" value="4" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-04T12:41:38.803Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="" date-time="2021-09-16T13:08:20.545Z" user="line-tofte"/>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-09-16T13:08:20.545Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="4" date-time="2021-09-16T13:11:06.533Z" user="line-tofte">4</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-09-16T13:11:06.533Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-07-07T08:16:46.445Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-07T08:16:46.445Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-07T08:17:52.127Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-07T08:19:58.723Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2022-12-14T13:30:49.474Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-12-14T13:30:49.474Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-08-04T12:41:38.803Z" type="translation-status" status="4" xml:id="UT22084-056-008-9">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-04T12:41:38.803Z" type="text-version" status="0.0.1" xml:id="UT22084-056-008-10">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-16T13:08:20.545Z" type="translation-status" status="" xml:id="UT22084-056-008-11">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2021-09-16T13:08:20.545Z" type="text-version" status="0.0.2" xml:id="UT22084-056-008-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-16T13:11:06.533Z" type="translation-status" status="4" xml:id="UT22084-056-008-13">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-09-16T13:11:06.533Z" type="text-version" status="0.0.3" xml:id="UT22084-056-008-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-07T08:16:46.445Z" type="translation-status" status="3" xml:id="UT22084-056-008-15">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-07T08:16:46.445Z" type="text-version" status="0.0.4" xml:id="UT22084-056-008-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-07T08:17:52.127Z" type="text-version" status="0.0.5" xml:id="UT22084-056-008-17">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-07T08:19:58.723Z" type="text-version" status="0.0.6" xml:id="UT22084-056-008-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-14T13:30:49.474Z" type="translation-status" status="2.h" xml:id="UT22084-056-008-19">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-14T13:30:49.474Z" type="text-version" status="0.0.7" xml:id="UT22084-056-008-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-056-008-21">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-03-31T06:34:46.348Z" type="text-version" status="0.0.9" xml:id="UT22084-056-008-22">
+                    <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
