--- a/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
+++ b/translations/kangyur/placeholders/088-023_toh529,888-the_great_incantation.xml
@@ -15,7 +15,7 @@
                 <consultant role="projectManager" xml:id="UT22084-088-023-4">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -28,7 +28,7 @@
                     <ref>Toh 529</ref>
                     <biblScope>vol.88, ff.73v-75v(pp.146-150)</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
-                        <volume number="88" start-page="146" end-page="150"/>
+                        <volume number="88" start-page="180" end-page="184"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12252" work="W22084"/>
@@ -37,7 +37,7 @@
                     <ref>Toh 888</ref>
                     <biblScope>vol.100, ff.163r-165v(pp.325-330)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="100" start-page="325" end-page="330"/>
+                        <volume number="101" start-page="323" end-page="328"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12650" work="W22084"/>
@@ -74,6 +74,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-05T11:23:45.524Z" type="text-version" status="0.0.7" xml:id="UT22084-088-023-14">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-03-31T06:57:24.513Z" type="text-version" status="0.0.8" xml:id="UT22084-088-023-15">
+                    <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
