--- a/translations/kangyur/placeholders/088-026_toh532,873-the_one_hundred_and_eight_names_of_lord_buddha_along_with_the_incantation.xml
+++ b/translations/kangyur/placeholders/088-026_toh532,873-the_one_hundred_and_eight_names_of_lord_buddha_along_with_the_incantation.xml
@@ -5,7 +5,7 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">sangs rgyas kyi mtshan brgya rtsa brgyad pa gzungs sngags dang bcas/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">buddhabhagavadaṣṭaśatanāmadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Buddhabhagavadaṣṭaśatanāmadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The One Hundred and Eight Names of Lord Buddha along with the Dhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas bcom ldan 'das kyi mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas kyi mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
@@ -13,7 +13,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">sangs rgyas bcom ldan 'das kyi mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa /</title>
                 <title type="otherTitle" xml:lang="en">[Note: this and the following eight dhāraṇī (Toh. 873-881) give series of 108 names for the Buddha and eight bodhisattvas. The Sanskrit titles are not found here but in the duplicate texts in the Action Tantra section. The placement of nāma (name) in the titles varies and is questionable in many; the longer titles are to be understood as “The 108 names of ‚Ä¶ along with the dhāraṇī”.]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-088-026"/>
             </publicationStmt>
             <sourceDesc>
@@ -21,7 +26,7 @@
                     <ref>Toh 532</ref>
                     <biblScope>vol.88, ff.78v-82v(pp.156-164)</biblScope>
                     <location work="UT4CZ5369" count-pages="9">
-                        <volume number="88" start-page="156" end-page="164"/>
+                        <volume number="88" start-page="190" end-page="198"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12255" work="W22084"/>
@@ -29,16 +34,23 @@
                 <bibl key="toh873" type="text">
                     <ref>Toh 873</ref>
                     <biblScope>vol.100, ff.96r-100v(pp.192-200)</biblScope>
-                    <location work="UT4CZ5369" count-pages="9">
-                        <volume number="100" start-page="192" end-page="200"/>
+                    <location work="UT4CZ5369" count-pages="10">
+                        <volume number="101" start-page="189" end-page="198"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12635" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:33:00.778Z" user="celso">23/09/2021 17:33:00</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-088-026-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-03-31T07:52:58.235Z" type="text-version" status="0.0.1" xml:id="UT22084-088-026-2">
+                    <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
