--- a/translations/kangyur/placeholders/088-037_toh542,872-the_incantation_known_as_distinctive.xml
+++ b/translations/kangyur/placeholders/088-037_toh542,872-the_incantation_known_as_distinctive.xml
@@ -5,15 +5,20 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">khyad par can gyi gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">viśeṣavatī dhāraṇī</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Viśeṣavatī dhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī known as "Distinctive"</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khyad par can zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryaviśeṣavatīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryaviśeṣavatīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī known as “Distinctive”</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa khyad par can zhes bya ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryaviśeṣavatīnāmadhāraṇī</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryaviśeṣavatīnāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-088-037"/>
             </publicationStmt>
             <sourceDesc>
@@ -21,7 +26,7 @@
                     <ref>Toh 542</ref>
                     <biblScope>vol.88, ff.85r-87v(pp.169-174)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="88" start-page="169" end-page="174"/>
+                        <volume number="88" start-page="203" end-page="208"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12266" work="W22084"/>
@@ -30,15 +35,22 @@
                     <ref>Toh 872</ref>
                     <biblScope>vol.100, ff.92v-95v(pp.184-190)</biblScope>
                     <location work="UT4CZ5369" count-pages="7">
-                        <volume number="100" start-page="184" end-page="190"/>
+                        <volume number="101" start-page="182" end-page="188"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12634" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:33:12.098Z" user="celso">23/09/2021 17:33:12</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-088-037-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-03-31T07:55:07.424Z" type="text-version" status="0.0.2" xml:id="UT22084-088-037-2">
+                    <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
