--- a/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
+++ b/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
@@ -8,14 +8,15 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">rnam par snang mdzad kyi snying po'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rnam par snang mdzad kyi snying po zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <author role="translatorMain" xml:id="UT22084-088-028-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-028-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-028"/>
                 <date/>
             </publicationStmt>
@@ -24,7 +25,7 @@
                     <ref>Toh 534</ref>
                     <biblScope>vol.88, ff.82v-82v(pp.164-164)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="88" start-page="164" end-page="164"/>
+                        <volume number="88" start-page="198" end-page="198"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12257" work="W22084"/>
@@ -33,20 +34,36 @@
                     <ref>Toh 861</ref>
                     <biblScope>vol.100,ff. 87r-87r(pp.173-173)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="100" start-page="173" end-page="173"/>
+                        <volume number="101" start-page="171" end-page="171"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12623" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-24T13:21:56.896Z" user="admin">24/04/2023 13:21:56</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:49:49.314Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:49:49.314Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:50:50.24Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-04-24T13:21:52.677Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-04-24T13:21:52.677Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T09:49:49.314Z" type="translation-status" status="3" xml:id="UT22084-088-028-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:49:49.314Z" type="text-version" status="0.0.1" xml:id="UT22084-088-028-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:50:50.24Z" type="text-version" status="0.0.2" xml:id="UT22084-088-028-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-24T13:21:52.677Z" type="translation-status" status="2.h" xml:id="UT22084-088-028-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-24T13:21:52.677Z" type="text-version" status="0.0.3" xml:id="UT22084-088-028-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-088-028-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-01T09:04:50.448Z" type="text-version" status="0.0.5" xml:id="UT22084-088-028-9">
+                    <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
