--- a/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
+++ b/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
@@ -8,14 +8,15 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">zla 'od kyi mtshan rjes dran/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">zla ba'i 'od kyi mtshan rjes su dran pa/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
+                <author role="translatorMain" xml:id="UT22084-088-029-1"/>
+                <author role="translatorEng" xml:id="UT22084-088-029-2">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-088-029"/>
                 <date/>
             </publicationStmt>
@@ -24,7 +25,7 @@
                     <ref>Toh 535</ref>
                     <biblScope>vol.88, ff.82v-83r(pp.164-165)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="88" start-page="164" end-page="165"/>
+                        <volume number="88" start-page="198" end-page="199"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12258" work="W22084"/>
@@ -33,20 +34,36 @@
                     <ref>Toh 868</ref>
                     <biblScope>vol.100,ff.88v-89r(pp.176-177)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="100" start-page="176" end-page="177"/>
+                        <volume number="101" start-page="174" end-page="175"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12630" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-24T13:27:57.416Z" user="admin">24/04/2023 13:27:57</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T09:51:38.578Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T09:51:38.578Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T09:52:08.438Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-04-24T13:27:53.153Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-04-24T13:27:53.153Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T09:51:38.578Z" type="translation-status" status="3" xml:id="UT22084-088-029-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:51:38.578Z" type="text-version" status="0.0.1" xml:id="UT22084-088-029-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T09:52:08.438Z" type="text-version" status="0.0.2" xml:id="UT22084-088-029-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-24T13:27:53.153Z" type="translation-status" status="2.h" xml:id="UT22084-088-029-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-24T13:27:53.153Z" type="text-version" status="0.0.3" xml:id="UT22084-088-029-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-088-029-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-01T09:10:27.325Z" type="text-version" status="0.0.5" xml:id="UT22084-088-029-9">
+                    <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
