--- a/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
+++ b/translations/kangyur/placeholders/088-031_toh537,870-recollecting_the_names_of_buddha_sikhin.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-088-031-2">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -28,7 +28,7 @@
                     <ref>Toh 537</ref>
                     <biblScope>vol.88, ff.83r-83r(pp.165-165)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="88" start-page="165" end-page="165"/>
+                        <volume number="88" start-page="199" end-page="199"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12260" work="W22084"/>
@@ -37,7 +37,7 @@
                     <ref>Toh 870</ref>
                     <biblScope>vol.100, ff.89r-89r(pp.177-177)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="100" start-page="177" end-page="177"/>
+                        <volume number="101" start-page="175" end-page="175"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12632" work="W22084"/>
@@ -62,6 +62,9 @@
                 </change>
                 <change who="#line-tofte" when="2023-08-02T13:59:12.947Z" type="text-version" status="0.0.4" xml:id="UT22084-088-031-8">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-04-01T09:24:01.245Z" type="text-version" status="0.0.5" xml:id="UT22084-088-031-9">
+                    <desc>Updated vol. 88 and 100 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
