--- a/translations/kangyur/placeholders/101-128_toh539c,1072-the_incantation_for_producing_clouds_of_offerings.xml
+++ b/translations/kangyur/placeholders/101-128_toh539c,1072-the_incantation_for_producing_clouds_of_offerings.xml
@@ -8,14 +8,15 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mchod pa'i sprin 'byung ba/ (mchod pa'i sprin 'byung ba'i gzungs/)</title>
                 <title type="otherTitle" xml:lang="en">[Note: the Tōhoku catalogue lists 7 short dhāraṇīs that it includes under the single Toh catalogue number, 539; this is the fourth.]</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-382">Dylan Esler</author>
+                <author role="translatorMain" xml:id="UT22084-101-128-1"/>
+                <author role="translatorEng" xml:id="UT22084-101-128-2">Dylan Esler</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-101-128"/>
                 <date/>
             </publicationStmt>
@@ -24,7 +25,7 @@
                     <ref>Toh 539c</ref>
                     <biblScope>vol.88, ff.83v-83v(pp.166-166)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="88" start-page="166" end-page="166"/>
+                        <volume number="88" start-page="200" end-page="200"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="toh539c" work="http://read.84000.co/sections"/>
@@ -33,18 +34,30 @@
                     <ref>Toh 1072</ref>
                     <biblScope>vol.101, ff.239v-239v(pp.478-478)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="478" end-page="478"/>
+                        <volume number="102" start-page="478" end-page="478"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12836" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-12-16T10:13:10.542Z" user="admin">16/12/2022 10:13:10</note>
-                <note type="updated" update="translation-status" value="3" date-time="2022-12-16T10:12:37.488Z" user="line-tofte">3</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2022-12-16T10:12:37.488Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2022-12-16T10:13:04.855Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-12-16T10:12:37.488Z" type="translation-status" status="3" xml:id="UT22084-101-128-3">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:12:37.488Z" type="text-version" status="0.0.1" xml:id="UT22084-101-128-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T10:13:04.855Z" type="text-version" status="0.0.2" xml:id="UT22084-101-128-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-101-128-6">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-01T15:01:44.662Z" type="text-version" status="0.0.4" xml:id="UT22084-101-128-7">
+                    <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
