--- a/translations/kangyur/placeholders/091-049_toh652,863-the_incantation_of_the_bodhisattva_supreme_conqueror.xml
+++ b/translations/kangyur/placeholders/091-049_toh652,863-the_incantation_of_the_bodhisattva_supreme_conqueror.xml
@@ -11,7 +11,12 @@
                 <title type="otherTitle" xml:lang="en">The Dhāraṇī of the Bodhisattva “Supreme Conqueror”</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rgyal ba'i bla ma'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-091-049"/>
             </publicationStmt>
             <sourceDesc>
@@ -28,15 +33,22 @@
                     <ref>Toh 863</ref>
                     <biblScope>vol.100, ff.87v-87v(pp.174-174)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="100" start-page="174" end-page="174"/>
+                        <volume number="101" start-page="172" end-page="172"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12625" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:34:52.226Z" user="celso">23/09/2021 17:34:52</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-049-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T06:44:53.712Z" type="text-version" status="0.0.2" xml:id="UT22084-091-049-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
