--- a/translations/kangyur/placeholders/091-032_toh635,875-the_incantation_of_the_one_hundred_and_eight_names_of_maitreya.xml
+++ b/translations/kangyur/placeholders/091-032_toh635,875-the_incantation_of_the_one_hundred_and_eight_names_of_maitreya.xml
@@ -5,16 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">byams pa'i mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">maitreyanāmāṣṭottara­śatakaṃ dhāraṇīmantrasahitam</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Maitreyanāmāṣṭottara­śatakaṃ dhāraṇīmantrasahitam</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī-mantra of the One Hundred and Eight Names of Maitreya</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pa'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamaitreyanāmāṣṭottara­śatakaṃ dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamaitreyanāmāṣṭottara­śatakaṃ dhāraṇīmantrasahitam</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇīmantra of the Hundred and Eight Names of Maitreya</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">maitreyanāmāṣṭottara­śatakaṃ dhāraṇī­mantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Maitreyanāmāṣṭottara­śatakaṃ dhāraṇī­mantrasahitam</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa byams pa'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryamaitreya­nāmāṣṭottara­śatakaṃ dhāraṇī­mantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryamaitreya­nāmāṣṭottara­śatakaṃ dhāraṇī­mantrasahitam</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-091-032"/>
             </publicationStmt>
             <sourceDesc>
@@ -31,15 +36,22 @@
                     <ref>Toh 875</ref>
                     <biblScope>vol.100, ff.103r-104v(pp.205-208)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="100" start-page="205" end-page="208"/>
+                        <volume number="101" start-page="203" end-page="206"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12637" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-27T13:17:09.366Z" user="celso">27/09/2021 13:17:09</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-032-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T12:44:44.384Z" type="text-version" status="0.0.2" xml:id="UT22084-091-032-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
