--- a/translations/kangyur/placeholders/091-033_toh636,876-the_incantation_of_the_one_hundred_and_eight_names_of_khagarbha_the_bodhisattva_khagarbha__kasagarbha.xml
+++ b/translations/kangyur/placeholders/091-033_toh636,876-the_incantation_of_the_one_hundred_and_eight_names_of_khagarbha_the_bodhisattva_khagarbha__kasagarbha.xml
@@ -5,16 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="Bo-Ltn">nam mkha'i snying po'i mtshan brgya rtsa brgyad pa'i gzungs sngags/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">khagarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
-                <title type="mainTitle" xml:lang="en">The Dhāraṇī-mantra of the One Hundred and Eight Names of Khagarbha [The bodhisattva Khagarbha = kāśagarbha]</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Khagarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="mainTitle" xml:lang="en">The Dhāraṇī-mantra of the One Hundred and Eight Names of Khagarbha [Ākāśagarbha]</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nam mkha'i snying po'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryakhagarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryakhagarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
                 <title type="otherTitle" xml:lang="en">The Dhāraṇīmantra of the Hundred and Eight Names of Khagarbha</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa nam mkha'i snying po'i mtshan brgya rtsa brgyad pa gzungs sngags dang bcas pa/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryakhagarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryakhagarbhāṣṭottara­śatakanāma dhāraṇīmantrasahitam</title>
                 <title type="otherTitle" xml:lang="en">[Note: the bodhisattva Khagarbha = Ākāśagarbha]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-091-033"/>
             </publicationStmt>
             <sourceDesc>
@@ -31,15 +36,22 @@
                     <ref>Toh 876</ref>
                     <biblScope>vol.100, ff.104v-107v(pp.208-214)</biblScope>
                     <location work="UT4CZ5369" count-pages="7">
-                        <volume number="100" start-page="208" end-page="214"/>
+                        <volume number="101" start-page="206" end-page="212"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12638" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-27T13:17:26.692Z" user="celso">27/09/2021 13:17:26</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-033-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-04-02T12:56:25.973Z" type="text-version" status="0.0.2" xml:id="UT22084-091-033-2">
+                    <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
