--- a/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
+++ b/translations/kangyur/translations/034-025_toh37-sutra_on_the_benefits_of_the_five_precepts.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-025-402">John Canti</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.1.1 <date>2024</date>
+                <edition>v 1.1.2 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -189,6 +189,9 @@
                 </change>
                 <change who="#john" when="2024-04-04T19:15:27.87Z" type="text-version" status="1.1.1" xml:id="UT22084-034-025-1227">
                     <desc>Added a paragraph to intro to acknowledge the nature of the passage on wives' disobedience.</desc>
+                </change>
+                <change who="#john" when="2024-04-04T19:31:49.095Z" type="text-version" status="1.1.2" xml:id="UT22084-034-025-1228">
+                    <desc>Further edits to the preceding.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -353,10 +356,9 @@
             It is an extra description, seemingly interposed as a supplement to the section on sexual misconduct,
             that places a woman’s lack of subservience and obedience to her husband in a stark moral light 
             with descriptions of its own specific fruition in the experience of the hell realms. 
-            Comparable but more general descriptions of the violent sufferings experienced by hell beings as the fruition
-            of their past negative actions are, of course, a feature of a number of canonical works, and 
-            in the later literature have their place in enumerations of the sufferings of saṃsāra; they are never 
-            pleasant reading. But this particular passage stands out as an outlier, and it would seem justifiable that its
+            None of the other descriptions in this text of negative actions and the violent sufferings experienced by hell beings as their fruition
+            make pleasant reading; nor indeed do comparable passages in a number of other canonical works and 
+            in the later literature. But this particular passage stands out as an outlier, and it would seem justifiable that its
             canonical status might at least be questioned.</p>
           <lb/>
           <milestone unit="chunk" xml:id="UT22084-034-025-72"/>
@@ -933,8 +935,8 @@
             worm, born in the lips at the place where the weapon struck the tip of the tongue, will
             eat the tongue. Even after it eats only a little, she will be unable to speak.
             Similarly, she will be cooked there for many thousands of years, <ref cRef="F.274.b" type="folio" xml:id="UT22084-034-025-381"/> and after being cooked there she will fall
-            again into a great hell.”<note place="end" xml:id="UT22084-034-025-1183">On this passage, 
-              see Introduction <ptr target="#UT22084-034-025-1072"/>..</note> </p>
+            again into a great hell.”<note place="end" xml:id="UT22084-034-025-1182">On this passage, 
+              see Introduction <ptr target="#UT22084-034-025-1072"/>–<ptr target="#UT22084-034-025-1073"/>.</note> </p>
           <p tid="78">For that reason, the Bhagavān has said: </p>
           <milestone unit="chunk" xml:id="UT22084-034-025-183"/>
           <lg tid="79">
